--- a/style.css
+++ b/style.css
@@ -174,17 +174,13 @@ textarea {
         width: 90% !important;
         max-width: 100vw;
         margin: auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 0;
-        padding: 10px;
-        box-sizing: border-box;
+        display: block;
     } 
 
     span {
         margin: 0 2px;
-        font-size: 16px;
+        font-size: 18px;
+        line-height: 2.0;
     }
 
 
