--- a/style.css
+++ b/style.css
@@ -125,12 +125,14 @@ textarea {
     text-align: center;
 }
 
+footer {
+    margin-top: 30px;
+    height: 15px;
+    background-image: linear-gradient(to left, #0166b4, #3eb8ad);
+}
+
 /** MOBILE **/
 @media screen and (max-width: 768px) {
-    body {
-        overflow-x: hidden; 
-        width: 100%;
-    }
 
     header {
         border-top: #0166b4 solid 4px;
@@ -143,17 +145,18 @@ textarea {
 
     header > h2 {
         font-size: 18px;
+        letter-spacing: 1px;
     }
 
     section#numerosSorteados {
-        width: 90% !important;
+        width: 100% !important;
         margin: auto;
         box-sizing: border-box;
     }
 
     input.sorteado {
-        height: 45px;
-        width: 45px;
+        height: 50px;
+        width: 50px;
         padding: 2px;
         font-size: 18px;
         margin-bottom: 5px;
@@ -162,7 +165,7 @@ textarea {
 
     button#btnVerificar, button#btnAdicionar {
         margin: 20px;
-        font-size: 16px;
+        font-size: 18px;
         letter-spacing: 1px;
     }
 
@@ -171,7 +174,7 @@ textarea {
     }
 
     div.container-jogos {
-        width: 90% !important;
+        width: 100% !important;
         max-width: 100vw;
         margin: auto;
         display: block;
@@ -185,7 +188,7 @@ textarea {
 
 
     div#entrarJogos {
-        width: 90% !important;
+        width: 100%;
         max-width: 100vw;
         margin: auto;
         padding: 0 10px;
